Update SalvoValidation for check the turn number.